페이지 링크
Homepage / ReviewAll 링크되어있습니다.

--- a/src/pages/reviewAll.html
+++ b/src/pages/reviewAll.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="reviewAll.css">
+<link rel="stylesheet" type="text/css" href="../css/reviewAll.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css"></link>
 </head>
 <body>
